[fix][build] fixed Clang warnings for Clang toolchain support

--- a/devlog/todo.txt
+++ b/devlog/todo.txt
@@ -21,3 +21,7 @@ stupid ticking glitch.
 rewrite slider
 fix listbox issue when scrolling and dragging?
 reduce ekg::slider<t> verbose number setting.
+
+// Add checkbox
+
+✔
