[fix] fixed a glitch on ui syncsizes, but not implemented to all widgets

--- a/devlog/todo.txt
+++ b/devlog/todo.txt
@@ -25,3 +25,5 @@ reduce ekg::slider<t> verbose number setting.
 // Add checkbox
 
 ✔
+
+// add `set_width` and `set_height` to all widgets setters dimension methods >< meowg
