[faq] erased stupid words from faq
meow.............

--- a/faq.txt
+++ b/faq.txt
@@ -1,28 +1,8 @@
-well thanks for using or testing this library
-
-i took some years to do... but yea, it will never be good as i want
-my life is insanely horrible, i have depression for a long time
-everything is fucking useless... i feel useless...
-i could not enjoy a moment like a girl, or not even be wha i am...
-i will never get a truly boyfriend... my life is insane hurtness
-
-maybe i should kiss my cats... a lot of programmers awesome than me, in many aspects... and me... im just
-a stupid girl who fucked the life with stupid chooses...
-if i could redo my life.... but idc, i will never get the good ending
-probly you think im a healthy mentall person, but no... im a insanely depressed and bad mentally
-i feel the ground... the sublime messages are back... the trees are crawling...
-stupid words
-
-yea, sorry, i ll never be happy, never be happy, not even a time.
-the lesson i got from programming is, it is useless for the real person
-coding stuff will not make your life better just, its like the use of drunk to
-fix some personal issue, this will not ha
-
-it hurt it hurt it hurt, it hurt, hurt a lot
-deadly hurt, the bad ending is back again, God
-all i have to say is... sorry
-it is predictable, the dark time is back
+meow meow, meow, my life is getting bettert................................................................. idkhow this happend bu here iam
+meiowmewomeowmeowmeomeow now i have a boyfriend (yea how?), i can be the girl ............... i always wamted mhmmm
+the life switchededddeded meow
+meow
 
 <3
 
-- Rina Wilk, 02/06/2024 at 19:28
+- Rina Wilk, 24/11/2024 at 22:38
